--- a/tables/results.html
+++ b/tables/results.html
@@ -6,6 +6,8 @@
 <th style="padding-left: 5px;padding-right: 5px;">Model 1</th>
 <th style="padding-left: 5px;padding-right: 5px;">Model 2</th>
 <th style="padding-left: 5px;padding-right: 5px;">Model 3</th>
+<th style="padding-left: 5px;padding-right: 5px;">Model 4</th>
+<th style="padding-left: 5px;padding-right: 5px;">Model 5</th>
 </tr>
 </thead>
 <tbody>
@@ -14,119 +16,165 @@
 <td style="padding-left: 5px;padding-right: 5px;">0.82 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.81 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.82 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.78 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.78 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">constant net rate (period 2)</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.82 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.84 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.84 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.81 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.81 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">constant net rate (period 3)</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.77 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.81 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.82 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.80 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.80 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">outdegree (density)</td>
 <td style="padding-left: 5px;padding-right: 5px;">-3.28 (0.23)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-5.51 (0.37)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-5.67 (0.38)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-5.62 (0.28)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-6.05 (0.15)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">indegree - popularity (sqrt)</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.46 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.45 (0.05)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.45 (0.05)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.47 (0.05)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.47 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">outdegree-trunc(2)</td>
 <td style="padding-left: 5px;padding-right: 5px;">-1.80 (0.43)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-1.45 (0.45)<sup>&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-1.37 (0.43)<sup>&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-0.45 (0.25)<sup>&middot;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">out-isolate</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.48 (0.43)</td>
 <td style="padding-left: 5px;padding-right: 5px;">-1.49 (0.68)<sup>&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-1.53 (0.69)<sup>&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">anti in-isolates</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.53 (0.21)<sup>&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.41 (0.21)<sup>&middot;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.41 (0.22)<sup>&middot;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">indegree at least 2</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.40 (0.19)<sup>&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.30 (0.19)</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.31 (0.20)</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">indegree at least 3</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.94 (0.28)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.81 (0.29)<sup>&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.81 (0.28)<sup>&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-0.49 (0.24)<sup>&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-0.48 (0.23)<sup>&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">devActLogVar ego</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.60 (0.07)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.59 (0.07)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.46 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.49 (0.03)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">comIntLogVar alter</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.09 (0.05)<sup>&middot;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.10 (0.05)<sup>&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.10 (0.05)<sup>&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.10 (0.04)<sup>&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">relActLogVar alter</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.02 (0.08)</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.02 (0.09)</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.03 (0.08)</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.03 (0.08)</td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">ageLogVar alter</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.16 (0.08)<sup>&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.16 (0.09)<sup>&middot;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-0.18 (0.08)<sup>&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-0.17 (0.08)<sup>&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">depUpDyad</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">1.96 (0.61)<sup>&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">2.00 (0.54)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">1.98 (0.53)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">depDownDyad</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">1.27 (0.51)<sup>&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">1.37 (0.46)<sup>&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">1.42 (0.43)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">depsUpLogVar alter</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">-0.01 (0.05)</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.01 (0.05)</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.01 (0.04)</td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">depsDownLogVar alter</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.03 (0.06)</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.06 (0.05)</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.06 (0.05)</td>
+</tr>
+<tr>
+<td style="padding-left: 5px;padding-right: 5px;">effect devActLogVar on rate</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.05 (0.02)<sup>&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.05 (0.02)<sup>&#42;&#42;</sup></td>
 </tr>
 <tr style="border-top: 1px solid #000000;">
 <td style="padding-left: 5px;padding-right: 5px;">Wald Statistics</td>
 <td style="padding-left: 5px;padding-right: 5px;">4967.32   (10)</td>
 <td style="padding-left: 5px;padding-right: 5px;">3338.73   (14)</td>
 <td style="padding-left: 5px;padding-right: 5px;">3311.99   (18)</td>
+<td style="padding-left: 5px;padding-right: 5px;">4764.57   (16)</td>
+<td style="padding-left: 5px;padding-right: 5px;">4808.36   (15)</td>
 </tr>
 </tbody>
 <tfoot>
 <tr>
-<td style="font-size: 0.8em;" colspan="4"><sup>&#42;&#42;&#42;</sup>p &lt; 0.001; <sup>&#42;&#42;</sup>p &lt; 0.01; <sup>&#42;</sup>p &lt; 0.05; <sup>&middot;</sup>p &lt; 0.1</td>
+<td style="font-size: 0.8em;" colspan="6"><sup>&#42;&#42;&#42;</sup>p &lt; 0.001; <sup>&#42;&#42;</sup>p &lt; 0.01; <sup>&#42;</sup>p &lt; 0.05; <sup>&middot;</sup>p &lt; 0.1</td>
 </tr>
 </tfoot>
 </table>
