--- a/tables/results_final.html
+++ b/tables/results_final.html
@@ -6,6 +6,7 @@
 <th style="padding-left: 5px;padding-right: 5px;">Model 1</th>
 <th style="padding-left: 5px;padding-right: 5px;">Model 2</th>
 <th style="padding-left: 5px;padding-right: 5px;">Model 3</th>
+<th style="padding-left: 5px;padding-right: 5px;">Model 4</th>
 </tr>
 </thead>
 <tbody>
@@ -14,65 +15,82 @@
 <td style="padding-left: 5px;padding-right: 5px;">0.72 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.73 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.73 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.78 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">constant net rate (period 2)</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.73 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.74 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.74 (0.04)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.81 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">constant net rate (period 3)</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.68 (0.03)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.70 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.70 (0.03)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.80 (0.04)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">effect devActLogVar on rate</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.10 (0.02)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.10 (0.02)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.10 (0.02)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.05 (0.02)<sup>&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">outdegree (density)</td>
 <td style="padding-left: 5px;padding-right: 5px;">-5.40 (0.14)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-5.55 (0.15)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">-5.54 (0.15)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">-6.21 (0.14)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">indegree - popularity (sqrt)</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.48 (0.03)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.50 (0.03)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">0.49 (0.03)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.53 (0.03)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">depUpDyad</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">2.92 (0.51)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">2.92 (0.51)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">2.02 (0.52)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">depDownDyad</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">2.49 (0.46)<sup>&#42;&#42;&#42;</sup></td>
 <td style="padding-left: 5px;padding-right: 5px;">2.41 (0.46)<sup>&#42;&#42;&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">1.29 (0.45)<sup>&#42;&#42;</sup></td>
 </tr>
 <tr>
 <td style="padding-left: 5px;padding-right: 5px;">4-cycles (1)</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
 <td style="padding-left: 5px;padding-right: 5px;">0.54 (0.26)<sup>&#42;</sup></td>
+<td style="padding-left: 5px;padding-right: 5px;">0.48 (0.24)<sup>&#42;</sup></td>
+</tr>
+<tr>
+<td style="padding-left: 5px;padding-right: 5px;">devActLogVar ego</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+<td style="padding-left: 5px;padding-right: 5px;">0.49 (0.03)<sup>&#42;&#42;&#42;</sup></td>
 </tr>
 <tr style="border-top: 1px solid #000000;">
 <td style="padding-left: 5px;padding-right: 5px;">Wald Statistics</td>
 <td style="padding-left: 5px;padding-right: 5px;">2344.12    (3)</td>
 <td style="padding-left: 5px;padding-right: 5px;">2305.23    (5)</td>
 <td style="padding-left: 5px;padding-right: 5px;">2476.59    (6)</td>
+<td style="padding-left: 5px;padding-right: 5px;">3757.83    (7)</td>
 </tr>
 </tbody>
 <tfoot>
 <tr>
-<td style="font-size: 0.8em;" colspan="4"><sup>&#42;&#42;&#42;</sup>p &lt; 0.001; <sup>&#42;&#42;</sup>p &lt; 0.01; <sup>&#42;</sup>p &lt; 0.05; <sup>&middot;</sup>p &lt; 0.1</td>
+<td style="font-size: 0.8em;" colspan="5"><sup>&#42;&#42;&#42;</sup>p &lt; 0.001; <sup>&#42;&#42;</sup>p &lt; 0.01; <sup>&#42;</sup>p &lt; 0.05; <sup>&middot;</sup>p &lt; 0.1</td>
 </tr>
 </tfoot>
 </table>
